[package]
name = "os_kernel"
version = "0.1.0"
edition = "2018"

# https://doc.rust-lang.org/cargo/reference/manifest.html

# Disable stack unwinding on panic

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

# Default config of PICs sends interrupt vector numbers from 0–15 to the CPU, but these are occupied by CPU exceptions. 
# Remap PIC interrupts to dif numbers to fix overlap 
pic8259 = "0.10.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]  # Port address / size
test-success-exit-code = 33  # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false  # Can remove test_runner code

[[test]]
name = "stack_overflow"
harness = false

